# AirTAudio

./: .travis.yml  README.md  audio_orchestra_build.html  doxy_audio-orchestra.py  index.html  lutin_airtaudio.py  lutin_audio-orchestra.py  lutin_audio_orchestra.py  pages.html
airtaudio/: Api.cpp  Api.h  CallbackInfo.h  DeviceInfo.cpp  DeviceInfo.h  Flags.cpp  Flags.h  Interface.cpp  Interface.h  StreamOptions.cpp  StreamOptions.h  StreamParameters.h  base.cpp  base.h  debug.cpp  debug.h  error.cpp  error.h  int24_t.h  mode.cpp  mode.h  state.h  status.cpp  status.h  type.cpp  type.h
airtaudio/api/: Alsa.cpp  Alsa.h  Android.cpp  Android.h  Asio.cpp  Asio.h  Core.cpp  Core.h  CoreIos.h  CoreIos.mm  Ds.cpp  Ds.h  Dummy.cpp  Dummy.h  Jack.cpp  Jack.h  Oss.cpp  Oss.h  Pulse.cpp  Pulse.h
android/org/musicdsp/orchestra/: Constants.java  InterfaceInput.java  InterfaceOutput.java  Manager.java  ManagerCallback.java  Orchestra.java  OrchestraConstants.java  OrchestraInterfaceInput.java  OrchestraInterfaceOutput.java  OrchestraManager.java  OrchestraManagerCallback.java  OrchestraNative.java
audio/orchestra/: Api.cpp  Api.h  Api.hpp  DeviceInfo.cpp  DeviceInfo.h  DeviceInfo.hpp  Flags.cpp  Flags.h  Flags.hpp  Interface.cpp  Interface.h  Interface.hpp  StreamOptions.cpp  StreamOptions.h  StreamOptions.hpp  StreamParameters.h  StreamParameters.hpp  base.h  base.hpp  debug.cpp  debug.h  debug.hpp  error.cpp  error.h  error.hpp  mode.cpp  mode.h  mode.hpp  state.cpp  state.h  state.hpp  status.cpp  status.h  status.hpp  type.cpp  type.h  type.hpp
audio/orchestra/api/: Alsa.cpp  Alsa.h  Alsa.hpp  Android.cpp  Android.h  Android.hpp  AndroidNativeInterface.cpp  AndroidNativeInterface.h  AndroidNativeInterface.hpp  Asio.cpp  Asio.h  Asio.hpp  Core.cpp  Core.h  Core.hpp  CoreIos.h  CoreIos.hpp  CoreIos.mm  Ds.cpp  Ds.h  Ds.hpp  Dummy.cpp  Dummy.h  Dummy.hpp  Jack.cpp  Jack.h  Jack.hpp  Oss.cpp  Oss.h  Pulse.cpp  Pulse.h  Pulse.hpp  PulseDeviceList.cpp  PulseDeviceList.h  PulseDeviceList.hpp
catkin/: CMakeLists.txt  package.xml
doc/: build.md  mainpage.md
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_5.js  all_8.js  classes_3.js  classes_4.js  classes_6.js  files_1.js  files_2.js  files_4.js  files_6.js  pages_0.js  pages_1.js  searchdata.js
tools/: lutin_orchestra-in.py  lutin_orchestra-list.py  lutin_orchestra-out.py  orchestra-in.cpp  orchestra-list.cpp  orchestra-out.cpp
