<?xml version="1.0"?>
<package>
  <name>audio_orchestra</name>
  <version>0.3.0</version>
  <description>Ewol RTAudio fork</description>
  <maintainer email="yui.heero@gmail.com">Edouard DUPIN</maintainer>
  <license>Apache-2.0</license>
  <build_depend>etk</build_depend>
  <build_depend>audio</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>etk</run_depend>
  <run_depend>audio</run_depend>
</package>
